@@ -95,6 +95,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - compat.{cpp,h}: remove inline keyword, because function is not defined
       in header file.
     - compat.h: include QtCore/qglobal.h for Q_OS_... macros.
+    - pulsemanager.{cpp,h}: new class for PulseAudio management.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
